<resources>
    <string name="app_name">Unah Mi Agenda</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logOut">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="solicitar_cuenta"><u>Solicitar cuenta</u></string>
    <string name="leer_noti"><u>Leer detalles...</u></string>
    <string name="title_activity_custom_list">customList</string>
    <string name="title_activity_program_list">program_list</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_news_feed">NewsFeed</string>
    <string name="title_activity_class_detail">Detalle de clase</string>
    <string name="title_activity_materias">Materias</string>
    <string name="title_activity_post_detail">post_detail</string>
    <string name="title_activity_create_ticket">Creación de Tickets</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_detail_noticia">Detalle de noticia</string>
    <string name="title_activity_detail_event">Detalle de evento</string>
    <string name="title_activity_register">Enviar Solicitud de Cuenta</string>
    <string name="title_activity_request_seccion">Petición de nueva sección</string>
    <string name="title_activity_noticias_all">Noticias</string>
    <string name="title_activity_help">Ayuda del sistema</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <!-- Icons -->
    <string name="fa_help">&#xf059;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_paper_plane_o">&#xf1d9;</string>
    <string name="fa_ticket">&#xf145;</string>
    <string name="fa_gears">&#xf085;</string>
    <string name="fa_log_out">&#xf08b;</string>

</resources>
