<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

    </android.support.v4.app.FragmentTabHost>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainMenu"
        android:background="#dedede"
        android:layout_gravity="start"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/menu_poster"
                android:id="@+id/main_menu_photo" />

            <LinearLayout
                android:id="@+id/perfil"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/userProfileIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_user"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="21dp"
                    android:text="Perfil"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="left"
                    android:layout_weight="7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/clases"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/clasesIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_paper_plane_o"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21dp"
                    android:text="Clases"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="left"
                    android:layout_weight="7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tickets"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/ticketIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_ticket"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21dp"
                    android:text="Tickets"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="left"
                    android:layout_weight="7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/help"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/helpIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_help"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21dp"
                    android:text="Ayuda"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="left"
                    android:layout_weight="7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logOut"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/logOutIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_log_out"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:layout_width=   "wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21dp"
                    android:text="Cerrar sesión"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="left"
                    android:layout_weight="7"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>



</android.support.v4.widget.DrawerLayout>